# track-isolator

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yml
src/isolator/: __init__.py  __main__.py  cli.py
tests/: test_cli.py
