[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "isolator"
version = "0.1.0"
description = "Separate MP3 files into isolated instrument and vocal stems."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [
  { name = "Isolator Contributors" }
]
dependencies = [
  "demucs>=4,<5",
  "soundfile>=0.12,<1",
  "torch>=2.2,<2.9",
  "torchaudio>=2.2,<2.9"
]

[project.scripts]
isolator = "isolator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/isolator"]
